tests/typing/bad/testfile-assign-4.c

struct S { int a; };
int main() { int x; struct S s; x = s; }
